--- a/GoShopping/ItemCellView.xib
+++ b/GoShopping/ItemCellView.xib
@@ -10,40 +10,50 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="center" id="gTV-IL-0wX" customClass="ItemCellView" customModule="GoShopping" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ItemCellView" customModule="GoShopping" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <imageView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="HJ6-8M-mCk">
+                        <rect key="frame" x="13" y="13" width="74" height="74"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Oww-Fa-2k2">
                         <rect key="frame" x="10" y="10" width="80" height="80"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" name="DarkGray"/>
                         <color key="highlightedColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </label>
                 </subviews>
             </view>
-            <color key="backgroundColor" name="BrandColor"/>
-            <color key="tintColor" name="BrandColor"/>
+            <color key="backgroundColor" name="CardColor"/>
             <constraints>
+                <constraint firstAttribute="bottom" secondItem="HJ6-8M-mCk" secondAttribute="bottom" constant="13" id="AsK-eI-5k6"/>
                 <constraint firstItem="Oww-Fa-2k2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="10" id="Bef-nC-Jci"/>
                 <constraint firstItem="Oww-Fa-2k2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="10" id="a5B-Ni-cpI"/>
+                <constraint firstItem="HJ6-8M-mCk" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="13" id="mVS-fZ-Mvg"/>
                 <constraint firstAttribute="bottom" secondItem="Oww-Fa-2k2" secondAttribute="bottom" constant="10" id="qgU-dR-kYM"/>
+                <constraint firstItem="HJ6-8M-mCk" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="13" id="sgr-vh-vMj"/>
                 <constraint firstAttribute="trailing" secondItem="Oww-Fa-2k2" secondAttribute="trailing" constant="10" id="tT8-I4-AIY"/>
+                <constraint firstAttribute="trailing" secondItem="HJ6-8M-mCk" secondAttribute="trailing" constant="13" id="xIw-lM-FjM"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <size key="customSize" width="202" height="180"/>
             <connections>
+                <outlet property="itemImage" destination="HJ6-8M-mCk" id="0D6-qQ-UOn"/>
                 <outlet property="itemNameLabel" destination="Oww-Fa-2k2" id="I80-lM-MTH"/>
             </connections>
             <point key="canvasLocation" x="-337.68115942028987" y="60.267857142857139"/>
         </collectionViewCell>
     </objects>
     <resources>
-        <namedColor name="BrandColor">
-            <color red="0.31000000238418579" green="0.68999999761581421" blue="0.62000000476837158" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="CardColor">
+            <color red="0.89411764705882346" green="0.96862745098039216" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="DarkGray">
+            <color red="0.22699999809265137" green="0.22699999809265137" blue="0.22699999809265137" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
