--- a/GoShopping/ToBuyTableViewCell.xib
+++ b/GoShopping/ToBuyTableViewCell.xib
@@ -9,18 +9,21 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="86" id="KGk-i7-Jjw" customClass="ToBuyTableViewCell" customModule="GoShopping" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="366" height="86"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="67" id="KGk-i7-Jjw" customClass="ToBuyTableViewCell" customModule="GoShopping" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="366" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="366" height="86"/>
+                <rect key="frame" x="0.0" y="0.0" width="366" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="djD-1l-sZS">
-                        <rect key="frame" x="11" y="10" width="64" height="66"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="djD-1l-sZS">
+                        <rect key="frame" x="12" y="12" width="36" height="36"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="48" id="RjP-Sf-1qW"/>
+                        </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0Z-Vm-J5N">
-                        <rect key="frame" x="83" y="21" width="263" height="44"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0Z-Vm-J5N">
+                        <rect key="frame" x="56" y="20" width="263" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -28,18 +31,26 @@
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-45" id="FNe-Rd-awv"/>
+                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="4" id="FfN-LQ-hzp"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="LJP-z6-Za3"/>
+                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="16" id="Re7-Tr-TVo"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="SgL-1N-pmh"/>
                     <constraint firstAttribute="bottom" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="21" id="SqV-DO-qeN"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" symbolic="YES" id="Wcw-aW-5mb"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="Y7r-fl-a2W"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YDa-WT-rGO"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="Z7u-qk-fPH"/>
+                    <constraint firstAttribute="bottom" secondItem="djD-1l-sZS" secondAttribute="bottom" constant="8" id="aUA-cB-1Dc"/>
                     <constraint firstAttribute="trailing" secondItem="t0Z-Vm-J5N" secondAttribute="trailing" constant="20" id="anh-La-4y8"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-4" id="cgS-Hf-n1r"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="83" id="g04-YK-elH"/>
                     <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="83" id="hu1-VF-rDs"/>
                     <constraint firstAttribute="trailing" secondItem="t0Z-Vm-J5N" secondAttribute="trailing" constant="20" id="k6w-uJ-leC"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-45" id="noY-NW-UlY"/>
                     <constraint firstAttribute="bottom" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="21" id="oF8-98-zcQ"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="centerY" secondItem="t0Z-Vm-J5N" secondAttribute="centerY" id="w1a-bn-QS4"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-9" id="yjZ-z9-Bbd"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="centerY" secondItem="t0Z-Vm-J5N" secondAttribute="centerY" id="pN0-dn-EeX"/>
+                    <constraint firstAttribute="bottom" secondItem="djD-1l-sZS" secondAttribute="bottom" constant="8" id="rgc-iw-3up"/>
+                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="v8l-cj-UOE"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="vUg-1M-MMF"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -47,7 +58,7 @@
                 <outlet property="toBuyItemImage" destination="djD-1l-sZS" id="LZS-sL-fB8"/>
                 <outlet property="toBuyItemLabel" destination="t0Z-Vm-J5N" id="LnQ-HJ-OI0"/>
             </connections>
-            <point key="canvasLocation" x="-26.086956521739133" y="34.821428571428569"/>
+            <point key="canvasLocation" x="11.594202898550726" y="15.401785714285714"/>
         </tableViewCell>
     </objects>
 </document>
