--- a/GoShopping/ToBuyTableViewCell.xib
+++ b/GoShopping/ToBuyTableViewCell.xib
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,49 +17,63 @@
                 <rect key="frame" x="0.0" y="0.0" width="366" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="djD-1l-sZS">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.20000000000000001" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="djD-1l-sZS">
                         <rect key="frame" x="12" y="12" width="36" height="36"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="48" id="RjP-Sf-1qW"/>
+                            <constraint firstAttribute="width" constant="36" id="IDb-Zd-xCi"/>
+                            <constraint firstAttribute="height" constant="36" id="Qfx-PB-6fb"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0Z-Vm-J5N">
-                        <rect key="frame" x="56" y="20" width="263" height="20.5"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t0Z-Vm-J5N">
+                        <rect key="frame" x="56" y="12" width="290" height="19"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vnu-MQ-b7h">
+                        <rect key="frame" x="56" y="33" width="131" height="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HiV-Za-mwK">
+                        <rect key="frame" x="315" y="33" width="31" height="15"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" name="BrandColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="4" id="FfN-LQ-hzp"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="LJP-z6-Za3"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="16" id="Re7-Tr-TVo"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="SgL-1N-pmh"/>
-                    <constraint firstAttribute="bottom" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="21" id="SqV-DO-qeN"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="Y7r-fl-a2W"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="YDa-WT-rGO"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="Z7u-qk-fPH"/>
-                    <constraint firstAttribute="bottom" secondItem="djD-1l-sZS" secondAttribute="bottom" constant="8" id="aUA-cB-1Dc"/>
-                    <constraint firstAttribute="trailing" secondItem="t0Z-Vm-J5N" secondAttribute="trailing" constant="20" id="anh-La-4y8"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-4" id="cgS-Hf-n1r"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="83" id="g04-YK-elH"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="83" id="hu1-VF-rDs"/>
-                    <constraint firstAttribute="trailing" secondItem="t0Z-Vm-J5N" secondAttribute="trailing" constant="20" id="k6w-uJ-leC"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="-45" id="noY-NW-UlY"/>
-                    <constraint firstAttribute="bottom" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="21" id="oF8-98-zcQ"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="centerY" secondItem="t0Z-Vm-J5N" secondAttribute="centerY" id="pN0-dn-EeX"/>
-                    <constraint firstAttribute="bottom" secondItem="djD-1l-sZS" secondAttribute="bottom" constant="8" id="rgc-iw-3up"/>
-                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="v8l-cj-UOE"/>
-                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="vUg-1M-MMF"/>
+                    <constraint firstAttribute="bottom" secondItem="djD-1l-sZS" secondAttribute="bottom" constant="12" id="1md-Kk-cmG"/>
+                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="2aR-8h-eyg"/>
+                    <constraint firstItem="Vnu-MQ-b7h" firstAttribute="top" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="4" id="Gwl-s7-ea3"/>
+                    <constraint firstAttribute="bottom" secondItem="HiV-Za-mwK" secondAttribute="bottom" constant="12" id="Q1q-WA-t3W"/>
+                    <constraint firstAttribute="trailing" secondItem="Vnu-MQ-b7h" secondAttribute="trailing" constant="100" id="TUN-N2-6cs"/>
+                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="aeW-1c-xgK"/>
+                    <constraint firstAttribute="trailing" secondItem="t0Z-Vm-J5N" secondAttribute="trailing" constant="20" id="bg3-6g-Q9g"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="bzf-hd-10G"/>
+                    <constraint firstAttribute="bottom" secondItem="Vnu-MQ-b7h" secondAttribute="bottom" constant="12" id="g56-CP-9CG"/>
+                    <constraint firstAttribute="trailing" secondItem="HiV-Za-mwK" secondAttribute="trailing" constant="20" id="hSr-Zt-mBt"/>
+                    <constraint firstItem="Vnu-MQ-b7h" firstAttribute="leading" secondItem="djD-1l-sZS" secondAttribute="trailing" constant="8" id="iff-iK-vj4"/>
+                    <constraint firstItem="HiV-Za-mwK" firstAttribute="top" secondItem="t0Z-Vm-J5N" secondAttribute="bottom" constant="2" id="paR-gT-tTC"/>
+                    <constraint firstItem="djD-1l-sZS" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="tLG-5E-aOT"/>
+                    <constraint firstItem="t0Z-Vm-J5N" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="ydm-MI-21u"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="supermarket" destination="HiV-Za-mwK" id="JhN-qb-QEl"/>
+                <outlet property="toBuyItemCategory" destination="Vnu-MQ-b7h" id="3Am-fw-Iin"/>
                 <outlet property="toBuyItemImage" destination="djD-1l-sZS" id="LZS-sL-fB8"/>
                 <outlet property="toBuyItemLabel" destination="t0Z-Vm-J5N" id="LnQ-HJ-OI0"/>
             </connections>
-            <point key="canvasLocation" x="11.594202898550726" y="15.401785714285714"/>
+            <point key="canvasLocation" x="-30.434782608695656" y="-34.151785714285715"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <namedColor name="BrandColor">
+            <color red="0.24300000071525574" green="0.83899998664855957" blue="0.65100002288818359" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
