--- a/GoShopping/Base.lproj/Main.storyboard
+++ b/GoShopping/Base.lproj/Main.storyboard
@@ -86,8 +86,8 @@
         <scene sceneID="YZq-Z2-pAa">
             <objects>
                 <tableViewController storyboardIdentifier="EditingTableViewController" id="WI0-Md-U6r" customClass="EditingTableViewController" customModule="GoShopping" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="60" estimatedRowHeight="60" sectionHeaderHeight="18" sectionFooterHeight="18" id="GwE-Ol-kOr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" allowsSelection="NO" rowHeight="80" estimatedRowHeight="80" sectionHeaderHeight="10" sectionFooterHeight="10" id="GwE-Ol-kOr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" name="BGColor"/>
                         <sections>
@@ -100,7 +100,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Item name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tDA-hv-s0H">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="名称" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tDA-hv-s0H">
                                                     <rect key="frame" x="15" y="13" width="313" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -151,13 +151,13 @@
                             <tableViewSection headerTitle="标签" id="382-3x-J6F">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="pEX-H7-1le">
-                                        <rect key="frame" x="16" y="231.5" width="343" height="60"/>
+                                        <rect key="frame" x="16" y="223.5" width="343" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pEX-H7-1le" id="qoY-RA-cri">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="supermarket" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j3r-MW-vTL">
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="偏好超市" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j3r-MW-vTL">
                                                     <rect key="frame" x="15" y="13" width="313" height="34"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <textInputTraits key="textInputTraits"/>
@@ -175,20 +175,20 @@
                             </tableViewSection>
                             <tableViewSection id="dGr-8V-CVx">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="80" id="q8o-d9-Sre">
-                                        <rect key="frame" x="16" y="327.5" width="343" height="80"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="60" id="q8o-d9-Sre">
+                                        <rect key="frame" x="16" y="303.5" width="343" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="q8o-d9-Sre" id="G7Q-vq-cwa">
-                                            <rect key="frame" x="0.0" y="0.0" width="343" height="80"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="60"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6gJ-0t-lls">
-                                                    <rect key="frame" x="16" y="20" width="311" height="50"/>
+                                                    <rect key="frame" x="16" y="10" width="311" height="30"/>
                                                     <color key="backgroundColor" name="BrandColor"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="50" id="mfb-YH-mmt"/>
+                                                        <constraint firstAttribute="height" constant="30" id="mfb-YH-mmt"/>
                                                     </constraints>
-                                                    <state key="normal" title="Button">
+                                                    <state key="normal" title="保存">
                                                         <color key="titleColor" name="CardColor"/>
                                                     </state>
                                                     <connections>
@@ -198,10 +198,11 @@
                                             </subviews>
                                             <color key="backgroundColor" name="BGColor"/>
                                             <constraints>
-                                                <constraint firstAttribute="bottom" secondItem="6gJ-0t-lls" secondAttribute="bottom" constant="20" id="Oqb-me-kHC"/>
+                                                <constraint firstItem="6gJ-0t-lls" firstAttribute="top" secondItem="G7Q-vq-cwa" secondAttribute="top" constant="10" id="JGJ-YW-1qa"/>
+                                                <constraint firstAttribute="bottom" secondItem="6gJ-0t-lls" secondAttribute="bottom" constant="10" id="Oqb-me-kHC"/>
                                                 <constraint firstAttribute="trailing" secondItem="6gJ-0t-lls" secondAttribute="trailing" constant="16" id="b2m-aI-ls3"/>
                                                 <constraint firstItem="6gJ-0t-lls" firstAttribute="leading" secondItem="G7Q-vq-cwa" secondAttribute="leading" constant="16" id="cQs-Uv-oCH"/>
-                                                <constraint firstItem="6gJ-0t-lls" firstAttribute="top" secondItem="G7Q-vq-cwa" secondAttribute="top" constant="20" id="oh7-V1-LBU"/>
+                                                <constraint firstItem="6gJ-0t-lls" firstAttribute="top" secondItem="G7Q-vq-cwa" secondAttribute="top" constant="10" id="oh7-V1-LBU"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
